<resources>
    <string name="app_name">demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_text1">微信，不只是个聊天工具</string>
    <string name="welcome_text2">微信，已经成为我们生活的一部分</string>
    <string name="welcome_start">开始我的微信生活</string>
    <string name="main_item0">账号</string>
    <string name="main_item1">微信</string>
    <string name="main_item2">开源中国</string>
    <string name="main_item3">引导界面</string>
    <string name="main_item4">页面滑动</string>
    <string name="main_item5">菜单侧滑</string>
    <string name="main_item6">动画效果</string>
    <string name="main_item7">通知栏</string>
    <string name="main_item8">Dialog</string>
    <string name="main_item9">ListView</string>
    <string name="main_item10">WiFi</string>
    <string name="main_item11">相机</string>
    <string name="main_item12">图片</string>
    <string name="main_item13">记事本</string>
    <string name="main_item14">进度条</string>
    <string name="main_item15">索引</string>
    <string name="main_item16">关于</string>
    <string name="main_item17">TextView</string>
    <string name="main_exit">退出</string>
    <string name="login">登 录</string>
    <string name="login_item0">微信登录</string>
    <string name="login_item1">QQ登录</string>
    <string name="login_item2">开心网登录</string>
    <string name="login_item3">邮箱登录</string>
    <string name="login_qq_account">输入QQ号码</string>
    <string name="login_qq_password">输入密码</string>
    <string name="login_qq_remember_password">记住密码</string>
    <string name="login_qq_register_new_account">注册新帐号</string>
    <string name="login_qq_more_login_options">更多登录选项</string>
    <string name="login_qq_hide_login">隐身登录</string>
    <string name="login_qq_silence_login">静音登录</string>
    <string name="login_qq_allow_phone_computer_online">允许手机/电脑同时在线</string>
    <string name="login_qq_receive_group_messages">接收群消息</string>
    <string name="login_qq_sending_request">正在发送请求</string>
    <string name="login_qq_prompt">正在验证帐号…</string>
    <string name="login_weixin_countries_and_areas">国家和地区</string>
    <string name="login_weixin_country">中国</string>
    <string name="login_weixin_num">你的手机号码</string>
    <string name="login_weixin_num_prefix">+86</string>
    <string name="login_weixin_password">填写密码</string>
    <string name="login_weixin_password_prefix">密码</string>
    <string name="login_weixin_question">登录遇到问题？</string>
    <string name="register">注 册</string>
    <string name="register_back">返回</string>
    <string name="register_qq_register">QQ注册</string>
    <string name="register_email">*邮箱</string>
    <string name="register_input_email">请输入邮箱</string>
    <string name="register_name">*昵称</string>
    <string name="register_input_name">请输入昵称</string>
    <string name="register_password">*密码</string>
    <string name="register_input_password">请输入密码</string>
    <string name="register_confirm_password">*确认 密码</string>
    <string name="register_input_password_again">请再次输入密码</string>
    <string name="register_tip">提示 \n带*项为必填项\n填写邮箱方便您找回密码以及了解更多QQ信息</string>
    <string name="register_weixin_countries_and_areas">国家和地区</string>
    <string name="register_weixin_country">中国</string>
    <string name="register_weixin_num">你的手机号码</string>
    <string name="register_weixin_num_prefix">+86</string>
    <string name="register_weixin_password">填写密码</string>
    <string name="register_weixin_password_prefix">密码</string>
    <string name="register_weixin_security_code">验证码</string>
    <string name="register_weixin_input_security_code">输入验证码</string>
    <string name="register_weixin_send_security_code">发送验证码</string>
    <string name="pop_cancle">取消</string>
    <string name="pop_change">注销用户</string>
    <string name="pop_exit">退出</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="weixin_chat">微信</string>
    <string name="weixin_contacts">通讯录</string>
    <string name="weixin_discover">发现</string>
    <string name="weixin_me">我</string>
    <string name="weixin_chat_neterror">当前网络不可用，请检查网络配置</string>
    <string name="weixin_chat_no_msg">暂时没有新消息</string>
    <string name="weixin_find_moments">朋友圈</string>
    <string name="weixin_find_scan">扫一扫</string>
    <string name="weixin_find_shake">摇一摇</string>
    <string name="weixin_find_people_nearby">附近的人</string>
    <string name="weixin_find_drift_bottle">漂流瓶</string>
    <string name="weixin_find_shopping">购物</string>
    <string name="weixin_find_games">游戏</string>
    <string name="weixin_find_bottom">底部滑动导航</string>
    <string name="weixin_me_chat_id">微信号: 13421812821</string>
    <string name="weixin_me_post">相册</string>
    <string name="weixin_me_collection">收藏</string>
    <string name="weixin_me_wallet">钱包</string>
    <string name="weixin_me_card_bag">卡包</string>
    <string name="weixin_me_expression">表情</string>
    <string name="weixin_me_setting">设置</string>
    <string name="weixin_menu_groupchat">发起聊天</string>
    <string name="weixin_menu_addfriend">添加朋友</string>
    <string name="weixin_menu_qrcode">扫一扫</string>
    <string name="weixin_menu_money">微信支付</string>
    <string name="weixin_menu_search">发起群聊</string>
    <string name="weixin_menu_feedback">意见与反馈</string>
    <string name="weixin_pushtotalk">按住说话</string>
    <string name="weixin_send">发送</string>
    <string name="weixin_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="weixin_attach_picture">图片</string>
    <string name="weixin_attach_take_pic">拍照</string>
    <string name="weixin_attach_location">位置</string>
    <string name="weixin_attach_file">文件</string>
    <string name="weixin_attach_voice">语音电话</string>
    <string name="weixin_attach_video">视频通话</string>
    <string name="weixin_attach_share0">豆瓣</string>
    <string name="weixin_attach_share1">开心网</string>
    <string name="weixin_attach_share2">QQ</string>
    <string name="weixin_attach_share3">QQ空间</string>
    <string name="weixin_attach_share4">人人网</string>
    <string name="weixin_attach_share5">新浪微博</string>
    <string name="weixin_attach_share6">腾讯微博</string>
    <string name="weixin_attach_share7">微信</string>
    <string name="weixin_attach_share8">朋友圈</string>
    <string name="weixin_attach_share9">米聊</string>
    <string name="weixin_connected_to_each_other">正在连接对方...</string>
    <string name="pay_title">微信支付</string>
    <string name="pay_right_text">设置金额</string>
    <string name="pay_money">￥188.00</string>
    <string name="pay_text">扫一扫上面的二维码，向我付钱</string>
    <string name="mycode_text">扫一扫上面的二维码图案，加我微信</string>
    <string name="mycode_title">我的二维码</string>
    <string name="setmoney_pay">付钱</string>
    <string name="setmoney_success">付款成功!</string>
    <string name="setmoney_prefix">您正在向</string>
    <string name="setmoney_account">微信号:</string>
    <string name="setmoney_suffix">付钱</string>
    <string name="setting_safe">账号安全</string>
    <string name="setting_new_msg">新消息通知</string>
    <string name="setting_yinsi">隐私</string>
    <string name="setting_tongyong">通用</string>
    <string name="setting_about">关于微信</string>
    <string name="setting_exit">退出登录</string>
    <string name="share_friend_circle">分享朋友圈</string>
    <string name="share_send">发送</string>
    <string name="friend_circle">朋友圈</string>
    <string name="friend_circle_long_press">长按发送文字</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_picture">相册</string>
    <string name="scan_flash">闪光</string>
    <string name="scan_qrcode">二维码</string>
    <string name="sacn_dialog_title">是否打开链接?</string>
    <string name="scan_dialog_url">http://www.baidu.com</string>
    <string name="scan_dialog_cancle">取消</string>
    <string name="scan_dialog_sure">确定</string>
    <string name="camera">相机</string>
    <string name="camera_more">更多</string>
    <string name="camera_take_picture">拍照</string>
    <string name="camera_scan">扫描二维码</string>
    <string name="camera_gallery">相册</string>
    <string name="camera_modify">修改头像</string>
    <string name="camera_take_picture_system_photo">调用系统Camera拍照片</string>
    <string name="camera_take_picture_system_video">调用系统Camera拍视频</string>
    <string name="camera_take_picture_api_photo">根据系统API拍照片</string>
    <string name="camera_take_picture_api_video">根据系统API拍视频</string>
    <string name="camera_cancel">取消</string>
    <string name="camera_sure">确定</string>
    <string name="camera_save">保存照片</string>
    <string name="gallery_system">系统相册</string>
    <string name="gallery_custom">自定义相册</string>
    <string name="screenshot_activity">截取当前屏幕</string>
    <string name="picture_item0">图片轮播</string>
    <string name="picture_item1">图片圆角1</string>
    <string name="picture_item2">图片圆角2</string>
    <string name="picture_item3">图片圆角3</string>
    <string name="picture_item4">图片翻转</string>
    <string name="picture_item5">图片处理</string>
    <string name="picture_item6">二维码</string>
    <string name="picture_item7">KenBurnsView</string>
    <string name="picture_item8">CustomShapeImageView</string>
    <string name="picture_item9">PhotoView</string>
    <string name="picture_item10">TextDrawable</string>
    <string name="picture_kenburns_item0">Single image</string>
    <string name="picture_kenburns_item1">Multiple images</string>
    <string name="picture_kenburns_item2">From url</string>
    <string name="picture_circle_start">播放</string>
    <string name="picture_circle_stop">停止</string>
    <string name="picture_process_rotate">旋转</string>
    <string name="picture_process_scale">缩放</string>
    <string name="picture_process_ｗatermark">水印</string>
    <string name="picture_process_reset">重置</string>
    <string name="picture_process_alpha_add">透明+</string>
    <string name="picture_process_alpha_sub">透明-</string>
    <string name="picture_process_tilt">倾斜</string>
    <string name="picture_process_distortion">扭曲</string>
    <string name="wifi">WiFi</string>
    <string name="wifi_hot">WiFi热点</string>
    <string name="wifi_pull_refresh">下拉刷新</string>
    <string name="animation_custom_circle_facebook">Facebook</string>
    <string name="animation_custom_circle_twitter">Twitter</string>
    <string name="animation_custom_circle_google">Google</string>
    <string name="animation_custom_circle_linkedin">LinkedIn</string>
    <string name="animation_custom_circle_wordpress">Wordpress</string>
    <string name="animation_custom_circle_myspace">Myspace</string>
    <string name="page_slide_item8_shake">摇一摇</string>
    <string name="page_slide_item8_contact">通讯录</string>
    <string name="page_slide_item8_nearby">附近</string>
    <string name="page_slide_item8_weibo">微博</string>
    <string name="page_slide_item8_qrcode">二维码</string>
    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_lastest">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    <string name="action_normal">Normal</string>
    <string name="action_parallax">Parallax</string>
    <string name="action_show_head">Show Head</string>
    <string name="action_hide_head">Hide Head</string>
    <string name="action_disable_zoom">Disable Zoom</string>
    <string name="action_enable_zoom">Enable Zoom</string>
</resources>