<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_normal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_normal"/>
    <item
        android:id="@+id/action_parallax"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_parallax"/>
    <item
        android:id="@+id/action_hide_head"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_hide_head"/>
    <item
        android:id="@+id/action_show_head"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_show_head"/>
    <item
        android:id="@+id/action_disable_zoom"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/action_disable_zoom"/>
    <item
        android:id="@+id/action_enable_zoom"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/action_enable_zoom"/>

</menu>