<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frame_btn_question_ask"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_question_ask" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name"  />

        <Button
            android:id="@+id/frame_btn_question_share"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_question_share" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name"  />

        <Button
            android:id="@+id/frame_btn_question_other"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_question_other" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name"  />

        <Button
            android:id="@+id/frame_btn_question_job"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_question_job" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name"  />

        <Button
            android:id="@+id/frame_btn_question_site"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_question_site" />
    </LinearLayout>

    <com.zhaoqy.app.demo.oschina.view.PullToRefreshListView
        android:id="@+id/frame_listview_question"
        style="@style/oschina_listview" />

</LinearLayout>