<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#999999"
    android:gravity="center_horizontal" >

    <include
        android:id="@+id/id_process_title"
        layout="@layout/view_title" />

    <LinearLayout
        android:id="@+id/id_process_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_process_title"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_process_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_rotate" />

        <Button
            android:id="@+id/id_process_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_scale" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_process_layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_process_layout1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_process_ｗatermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_ｗatermark" />

        <Button
            android:id="@+id/id_process_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_reset" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_process_layout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_process_layout2"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_process_alpha_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_alpha_add" />

        <Button
            android:id="@+id/id_process_alpha_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_alpha_sub" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_process_layout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_process_layout3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_process_tilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_tilt" />

        <Button
            android:id="@+id/id_process_distortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_process_distortion" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_process_layout4"
        android:layout_marginTop="5dp"
        android:background="#ffffCC99" >

        <ImageView
            android:id="@+id/id_process_iamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

</RelativeLayout>