<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frame_btn_tweet_lastest"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_tweet_lastest" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/frame_btn_tweet_hot"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_tweet_hot" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/frame_btn_tweet_my"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_tweet_my" />
    </LinearLayout>

    <com.zhaoqy.app.demo.oschina.view.PullToRefreshListView
        android:id="@+id/frame_listview_tweet"
        style="@style/oschina_listview" />

</LinearLayout>