<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frame_btn_news_lastest"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_news_lastest" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/frame_btn_news_blog"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_news_blog" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/oschina_frame_line"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/frame_btn_news_recommend"
            style="@style/oschina_frame_button"
            android:text="@string/frame_title_news_recommend" />
    </LinearLayout>

    <com.zhaoqy.app.demo.oschina.view.PullToRefreshListView
        android:id="@+id/frame_listview_news"
        style="@style/oschina_listview" />

    <com.zhaoqy.app.demo.oschina.view.PullToRefreshListView
        android:id="@+id/frame_listview_blog"
        style="@style/oschina_listview"
        android:visibility="gone" />

</LinearLayout>